--- a/UI/main.css
+++ b/UI/main.css
@@ -1,321 +1,7 @@
-/* 
-   * @auther : Desire Kaleba
-   * @title: deska
-   * @description: Simple flex css framework
-*/
-
-/* variables */
-:root {
-    --color-primary: #2699FB;
-    --color-secondary: #396DD5;
-    --white: #FFFFFF;
-    --black: #000000;
-    --black-secondary: #222222;
-}
-
-/* background colors */
-/* blacks */
-.black {
-    background-color: var(--black);
-}
-.black-secondary {
-    background-color: var(--black-secondary);
-}
-/* whites */
-.white {
-    background-color: var(--white);
-}
-
-/* Colors */
-.clr-black {
-    color: var(--black);
-}
-.clr-white {
-    color: var(--white);
-}
-.clr-primary {
-    color: var(--color-primary);
-}
-.clr-secondary {
-    color: var(--color-secondary);
-}
-
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    line-height: 1.6;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-}
-
-body {
-    overflow-x: hidden;
-}
-
-/* Links */
-a {
-    display: inline-flex;
-    text-decoration: none;
-}
-a:hover {
-    color: var(--color-primary);
-}
-
-/* inputs, selects, and textarea */
-input, select, textarea {
-    width: 100%;
-    display: inline-flex;
-    padding: .2rem 1.2rem;
-    border: 1px solid #ccc;
-}
-input[type='submit'] {
-    width: 100%;
-    border: none;
-    background-color: var(--color-primary);
-    color: var(--white);
-    text-align: center;
-}
-/* wrapper (container) */
-.wrapper {
-    padding: 0 4rem;
-}
-
-/* Flex display */
-/* row */
-.flex {
-    display: flex;
-}
-.flex-row {
-    display: flex;
-    flex-direction: row;
-}
-/* column */
-.flex-col {
-    display: flex;
-    flex-direction: column;
-}
-.wrap {
-    flex-wrap: wrap;
-}
-.no-wrap {
-    flex-wrap: nowrap;
-}
-/* Flex justify */
-.j-btwn {
-    justify-content: space-between;
-}
-.j-around {
-    justify-content: space-around;
-}
-/* alignment */
-.a-center {
-    align-items: center;
-}
-/* Flex alignment */
-.center {
-    justify-content: center;
-    align-items: center;
-}
-
-/* Margins */
-/* Top */
-.mt-1 {
-    margin-top: 1rem;
-}
-.mt-2 {
-    margin-top: 2rem;
-}
-.mt-3 {
-    margin-top: 3rem;
-}
-.mt-4 {
-    margin-top: 4rem;
-}
-/* bottom */
-.mb-1 {
-    margin-bottom: 1rem;
-}
-.mb-2 {
-    margin-bottom: 2rem;
-}
-.mb-3 {
-    margin-bottom: 3rem;
-}
-.mb-4 {
-    margin-bottom: 4rem;
-}
-/* Left */
-.ml-1 {
-    margin-left: 1rem;
-}
-.ml-2 {
-    margin-left: 2rem;
-}
-.ml-3 {
-    margin-left: 3rem;
-}
-.ml-4 {
-    margin-left: 4rem;
-}
-/* Right */
-.mr-1 {
-    margin-right: 1rem;
-}
-.mr-2 {
-    margin-right: 2rem;
-}
-.mr-3 {
-    margin-right: 3rem;
-}
-.mr-4 {
-    margin-right: 4rem;
-}
-
-/* Paddings */
-/* Top */
-.pt-1 {
-    padding-top: 1rem;
-}
-.pt-2 {
-    padding-top: 2rem;
-}
-.pt-3 {
-    padding-top: 3rem;
-}
-.pt-4 {
-    padding-top: 4rem;
-}
-/* Bottom */
-.pb-1 {
-    padding-bottom: 1rem;
-}
-.pb-2 {
-    padding-bottom: 2rem;
-}
-.pb-3 {
-    padding-bottom: 3rem;
-}
-.pb-4 {
-    padding-bottom: 4rem;
-}
-/* Left */
-.pl-1 {
-    padding-left: 1rem;
-}
-.pl-2 {
-    padding-left: 2rem;
-}
-.pl-3 {
-    padding-left: 3rem;
-}
-.pl-4 {
-    padding-left: 4rem;
-}
-
-/* Stickies */
-/* top */
-.sticky-top {
-    position: sticky;
-    top: 0;
-}
-
-/* Font weights */
-.fw-1 {
-    font-weight: 100;
-}
-.fw-2 {
-    font-weight: 200;
-}
-.fw-3 {
-    font-weight: 300;
-}
-.fw-4 {
-    font-weight: 400;
-}
-.fw-5 {
-    font-weight: 500;
-}
-.fw-6 {
-    font-weight: 600;
-}
-.fw-7 {
-    font-weight: 700;
-}
-.fw-8 {
-    font-weight: 800;
-}
-.fw-9 {
-    font-weight: 900;
-}
-
-/* Opacities */
-.op-1 {
-    opacity: .1;
-}
-.op-2 {
-    opacity: .2;
-}
-.op-3 {
-    opacity: .3;
-}
-.op-4 {
-    opacity: .4;
-}
-.op-5 {
-    opacity: .5;
-}
-.op-6 {
-    opacity: .6;
-}
-.op-7 {
-    opacity: .7;
-}
-.op-8 {
-    opacity: .8;
-}
-.op-9 {
-    opacity: .9;
-}
-
-/* Viewport */
-/* height */
-.vh-1 {
-    height: 25vh;
-}
-.vh-2 {
-    height: 50vh;
-}
-.vh-3 {
-    height: 75vh;
-}
-.vh-4 {
-    height: 100vh;
-}
-/* Width */
-.vw-1 {
-    width: 25vw;
-}
-.vw-2 {
-    width: 50vw;
-}
-.vw-3 {
-    width: 75vw;
-}
-.vw-4 {
-    width: 100vw;
-}
-
-/* borders */
-/* top */
-.bda-t {
-    border-top: 1px solid;
-}
-.bda-b {
-    border-bottom: 1px solid;
-}
-.bda-l {
-    border-left: 1px solid;
-}
-.bda-r {
-    border-right: 1px solid;
+#awards {
+    background-image: url('./img/awards-bg.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    background-attachment: fixed;
 }
