--- a/UI/deskastyle.css
+++ b/UI/deskastyle.css
@@ -56,6 +56,9 @@
 .bg-secondary {
     background-color: var(--color-secondary);
 }
+.bg-black {
+    background-color: var(--black);
+}
 .clr-primary {
     color: var(--color-primary);
 }
