--- a/UI/components/login.html
+++ b/UI/components/login.html
@@ -28,7 +28,7 @@
     <main>
         <div class="wrapper mt-3">
             <div class="wrapper bg-black clr-white pt-1 pb-3">
-                <h1>Login</h1>
+                <h2 class="fw-4">Login</h2>
                 <form action="" method="POST">
                     <div>
                         <label for="email">Email</label>
