--- a/UI/deskastyle.css
+++ b/UI/deskastyle.css
@@ -663,7 +663,7 @@ and (orientation: landscape) {
 }
 /* iPhone5 portrait */
 @media only screen and (min-device-width: 320px)
-and (max-device-width: 568)
+and (max-device-width: 568px)
 and (orientation: portrait) {
     .flex-row {
         flex-direction: column;
