--- a/UI/components/login.html
+++ b/UI/components/login.html
@@ -44,6 +44,23 @@
             </div>
         </div>
     </main>
+    <footer class="wrapper black clr-white mt-3 pt-1 pb-2">
+        <div class="social mb-1">
+            <a href="#"><img class="social-m wtp mr-1" src="../img/awesome-whatsapp.png" alt="Whatsapp" /></a>
+            <a href="#"><img class="social-m inst mr-1" src="../img/awesome-instagram.png" alt="Instagram" /></a>
+            <a href="#"><img class="social-m twt mr-1" src="../img/awesome-twitter.png" alt="Twitter" /></a>
+            <a href="#"><img class="social-m fcbk" src="../img/awesome-facebook.png" alt="Facebook" /></a>
+        </div>
+        <div class="bda-t">
+            <div class="flex-row j-btwn pt-1">
+                <p>&copy; 2020 way<span class="clr-primary">Farer</span></p>
+                <div class="">
+                    <a href="#">Terms of services</a>
+                    <a href="#">Privacy Policy</a>
+                </div>
+            </div>
+        </div>
+    </footer>
 </body>
 
 </html>
