feat(column width) : Add columns width to a flex-row
flex-row arrange element in a row format, seeing that, i added
flex-row-col-# where # is to be remplaced with a number from 1 to 10.
the given number times 10 gives you the component width

--- a/UI/deskastyle.css
+++ b/UI/deskastyle.css
@@ -125,6 +125,12 @@ input[type='submit'] {
 .wrapper {
     padding: 0 4rem;
 }
+.wrapper-md {
+    padding: 0 2rem;
+}
+.wrapper-sm {
+    padding: 0 1rem;
+}
 
 /* Flex display */
 /* row */
@@ -147,6 +153,37 @@ input[type='submit'] {
     -ms-flex-direction: row;
     width: 100%;
     overflow-x: hidden;
+}
+/* column width for a flex-row */
+.flex-row-col-1 {
+    width: 10%;
+}
+.flex-row-col-2 {
+    width: 20%;
+}
+.flex-row-col-3 {
+    width: 30%;
+}
+.flex-row-col-4 {
+    width: 40%;
+}
+.flex-row-col-5 {
+    width: 50%;
+}
+.flex-row-col-6 {
+    width: 60%;
+}
+.flex-row-col-7 {
+    width: 70%;
+}
+.flex-row-col-8 {
+    width: 80%;
+}
+.flex-row-col-9 {
+    width: 90%;
+}
+.flex-row-col-10 {
+    width: 100%;
 }
 /* column */
 .flex-col {
