feat: Add icons to accordion items
Added corresponding icons to Trips, Bookings, Settings, and their subcontent accordion items

--- a/UI/components/admin.html
+++ b/UI/components/admin.html
@@ -27,19 +27,19 @@
             </div>
             <div class="accordion bda-t pt-1 pb-1">
                 <div class="accordion-item">
-                    <h5 class="accordion-title">Trips</h5>
+                    <h5 class="accordion-title"><img src="../img/awesome-bus.png" width="15"/>&nbsp;&nbsp; Trips</h5>
                     <div class="accordion-body">
-                        <button>Create trip</button>
+                        <button><img src="../img/add.png" width="15"/>&nbsp;&nbsp; Create trip</button>
                     </div>
                 </div>
                 <div class="accordion-item">
-                    <h5 class="accordion-title">Bookings</h5>
+                    <h5 class="accordion-title"><img src="../img/awesome-bus.png" width="15"/>&nbsp;&nbsp; Bookings</h5>
                     <div class="accordion-body">
-                        <button>All Bookings</button>
+                        <button><img src="../img/awesome-bus.png" width="15"/>&nbsp;&nbsp; All Bookings</button>
                     </div>
                 </div>
                 <div class="accordion-item">
-                    <h5 class="accordion-title">Settings</h5>
+                    <h5 class="accordion-title"><img src="../img/settings.png" width="15"/>&nbsp;&nbsp;Settings</h5>
                     <div class="accordion-body">
                         <button>Change profile</button>
                     </div>
