feat: Add font sizes to deskastyle
The possibility to just add a class like .fz-1 up to .fz-4 is now
possible in deskastyle. fz-1 equal to 1rem font-size, fz-2 is 2rem and
so on up to fz-4

--- a/UI/deskastyle.css
+++ b/UI/deskastyle.css
@@ -547,6 +547,20 @@ input[type="submit"] {
     opacity: 0.9;
 }
 
+/* Font-size */
+.fz-1 {
+    font-size: 1rem;
+}
+.fz-2 {
+    font-size: 2rem;
+}
+.fz-3 {
+    font-size: 3rem;
+}
+.fz-4 {
+    font-size: 4rem;
+}
+
 /* Viewport */
 /* height */
 .vh-1 {
