fix(margin): Fix margin top for both trips and bookings counters

--- a/UI/components/admin.html
+++ b/UI/components/admin.html
@@ -18,7 +18,7 @@
 </head>
 
 <body style="background-color: silver;">
-    <main class="flex-row no-wrap j-btwn wrapper-md">
+    <main class="flex-row no-wrap j-btwn wrapper-md pt-1 pb-1">
         <div class="white grow-1 wrapper-sm pt-1">
             <div class="user-info text-center mb-2">
                 <img src="../img/profile-picture-default-male.png" alt="" width="100" />
@@ -48,12 +48,14 @@
         </div>
 
         <div class="grow-2 wrapper-sm">
-            <div class="flex-row j-btwn">
-                <div class="white wrapper-sm">25 Trips</div>
-                <div class="white wrapper-sm">345 bookings</div>
+            <div class="flex-row j-btwn mt-2">
+                <div class="white wrapper-sm"><span class="clr-primary fz-2">25</span> Trips</div>
+                <div class="white wrapper-sm"><span class="clr-primary fz-2">345</span> bookings</div>
             </div>
             <div class="">
                 <h3>Trips</h3>
+                <div class="trips white wrapper-sm pt-1 pb-1">
+                </div>
             </div>
         </div>
 
