--- a/UI/main.css
+++ b/UI/main.css
@@ -1,11 +1,11 @@
 #awards {
-    background-image: url('./img/awards-bg.jpg');
-    background-repeat: no-repeat;
+    background-color: #ccc;
     background-size: cover;
     background-position: center;
     background-attachment: fixed;
 }
 
-header {
-    padding-top: 19%;
+.award {
+    border: 1px solid black;
+    padding: 1rem;
 }
