--- a/UI/main.css
+++ b/UI/main.css
@@ -6,21 +6,20 @@
 
 }
 
-.award {
-    border: 1px solid black;
-    padding: 1rem;
-}
-
 .award img {
     max-width: 3rem;
+    height: 3rem;
 }
 
 .award>h3 {
     font-size: 2rem;
+    position: relative;
 }
 
 .award h4 {
     font-weight: 100;
+    position: absolute;
+
 }
 
 #email-subscription-form {
