--- a/UI/components/admin.html
+++ b/UI/components/admin.html
@@ -18,7 +18,7 @@
 </head>
 
 <body style="background-color: silver;">
-    <main class="flex-row no-wrap j-btwn wrapper-md pt-1 pb-1">
+    <main class="flex-row no-wrap j-btwn pt-1 pb-1">
         <div class="white grow-1 wrapper-sm pt-1">
             <div class="user-info text-center mb-2">
                 <img src="../img/profile-picture-default-male.png" alt="" width="100" />
