--- a/UI/components/admin.html
+++ b/UI/components/admin.html
@@ -60,7 +60,7 @@
         </div>
 
         <div class="grow-2 white wrapper-sm">
-            <div>
+            <div class="pt-1">
                 <span>Seating capacity: </span>
                 <span>67</span>
             </div>
