--- a/UI/deskastyle.css
+++ b/UI/deskastyle.css
@@ -45,6 +45,7 @@
     -ms-transition: all 0.4s ease-in-out;
 }
 
+/* On hover on the primary button */
 .button:hover {
     background-color: var(--color-primary);
     color: var(--white);
