--- a/UI/deskastyle.css
+++ b/UI/deskastyle.css
@@ -62,6 +62,8 @@
     color: var(--white);
 }
 
+/* background colors */
+/* primary color */
 .bg-primary {
     background-color: var(--color-primary);
 }
