--- a/UI/deskastyle.css
+++ b/UI/deskastyle.css
@@ -68,6 +68,7 @@
     background-color: var(--color-primary);
 }
 
+/* secondary color */
 .bg-secondary {
     background-color: var(--color-secondary);
 }
