--- a/UI/deskastyle.css
+++ b/UI/deskastyle.css
@@ -14,6 +14,16 @@
     --black-secondary: #222222;
 }
 
+/* reset and general look and feel */
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    line-height: 1.6;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+        Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+}
+
 /* background colors */
 /* blacks */
 .black {
@@ -86,15 +96,6 @@
 /* secondary color */
 .clr-secondary {
     color: var(--color-secondary);
-}
-
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    line-height: 1.6;
-    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-        Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 
 body {
