--- a/UI/deskastyle.css
+++ b/UI/deskastyle.css
@@ -309,10 +309,12 @@ input[type="submit"] {
 }
 
 /* Flex justify */
+/* justify space-between */
 .j-btwn {
     justify-content: space-between;
 }
 
+/* justify space-around */
 .j-around {
     justify-content: space-around;
 }
